--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,7 +15,9 @@
     "@vitejs/plugin-react": "^4.3.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.7",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "vite-plugin-image-optimizer": "^2.0.3"
   }
 }
